build_error.txt

> build
> vinxi build

vinxi v0.5.3
file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/@tanstack/start-config/dist/esm/vinxi-file-router.js:2
import { CONSTANTS as GENERATOR_CONSTANTS, startAPIRouteSegmentsFromTSRFilePath, } from '@tanstack/router-generator';
         ^^^^^^^^^
SyntaxError: The requested module '@tanstack/router-generator' does not provide an export named 'CONSTANTS'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:175:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:258:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
    at async loadFile (file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/vinxi/lib/load-app.js:83:25)
    at async loadApp (file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/vinxi/lib/load-app.js:137:19)
    at async Object.run (file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/vinxi/bin/cli.mjs:229:17)
    at async runCommand (file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/vinxi/node_modules/citty/dist/index.mjs:316:16)
    at async runCommand (file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/vinxi/node_modules/citty/dist/index.mjs:307:11)
    at async runMain (file:///home/alberto/Documentos/Proyectos/mkt-notes-hub/node_modules/vinxi/node_modules/citty/dist/index.mjs:445:7)

 ERROR  Couldn't load app

    at Object.run (node_modules/vinxi/bin/cli.mjs:231:12)
    at async runCommand (node_modules/vinxi/node_modules/citty/dist/index.mjs:316:16)
    at async runCommand (node_modules/vinxi/node_modules/citty/dist/index.mjs:307:11)
    at async runMain (node_modules/vinxi/node_modules/citty/dist/index.mjs:445:7) 



 ERROR  Couldn't load app

